--- a/index.html
+++ b/index.html
@@ -14,14 +14,8 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a href="/js/1_array_destructuring.html">Array destructuring</a>
-      <a href="/page2.html">Other page</a>
-      <a href="/page2.html">Other page</a>
-      <a href="/page2.html">Other page</a>
-      <a href="/page2.html">Other page</a>
-      <a href="/page2.html">Other page</a>
-      <a href="/page2.html">Other page</a>
-      <a href="/page2.html">Other page</a>
+      <a href="/topics/1_array_destructuring.html">Array destructuring</a>
+      <a href="/topics/2_spread_operators.html">Spread Operators</a>
     </nav>
     <main>
       <h1>Home page</h1>
