--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <a href="/" aria-current="page">Home</a>
       <a href="/topics/1_array_destructuring.html">Array destructuring</a>
-      <a href="/topics/2_spread_operators.html">Spread Operators</a>
+      <a href="/topics/2_fat_arrow_function.html">Fat Arrow Function</a>
     </nav>
     <main>
       <h1>Home page</h1>
