2 Fat arrow function done

--- a/topics/1_array_destructuring.html
+++ b/topics/1_array_destructuring.html
@@ -1,22 +1,13 @@
+<link rel="stylesheet" href="../styles.css" />
 <div class="topic_header">
   <h3><b>Topic :</b> Array Destructuring</h3>
   <p>
     <b>Details :</b> It is basically used to extract values from array into
     separate variables.
   </p>
-  <center>Execution Below</center>
+  <div>Execution Below</div>
 </div>
 
-<!-- <hr />
-<center><b>Topic</b></center>
-<hr />
-<h3>Array Destructuring</h3>
-<p>
-  It is basically used to extract values from array into separate variables.
-</p>
-<hr />
-<center><b>Execution</b></center>
-<hr /> -->
 <script>
   const mylang = ['js', 'php', 'java', 'python', 'c++'];
 
