--- a/topics/2_fat_arrow_function.html
+++ b/topics/2_fat_arrow_function.html
@@ -1,8 +1,34 @@
-<h3>Arrow function / Fat arrow function</h3>
-<p>ES6 introduced new way of writing consise function.</p>
-<hr />
-Execution :
-<hr />
+<link rel="stylesheet" href="../styles.css" />
+<div class="topic_header">
+  <h3><b>Topic :</b> Arrow Function / Fat Arrow Function</h3>
+  <p>
+    <b>Details :</b> ES6 introduced new way of writing consise function in
+    javascript. Its just a different syntax nothing change in execution.
+  </p>
+  <div>Execution Below</div>
+</div>
+
 <script>
-  document.write('Hi');
+  // es5 old way
+  // var sum = function () {
+  //   var a = 5;
+  //   var b = 10;
+  //   return a + b;
+  // };
+  // document.write(sum()); // OUTPUT : 15
+
+  // es6 new way
+  const sum = () => {
+    let a = 5;
+    let b = 10;
+    return a + b;
+  };
+  document.write(sum()); // OUTPUT : 15
+
+  // es6 single line logic.
+  // return keyword and curly brackets not required in single line expression.
+  // let a = 5;
+  // let b = 10;
+  // const sum = (c) => a + b + c;
+  // document.write(sum(15)); // OUTPUT : 30
 </script>
