3 Default parameters done

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a href="/topics/1_array_destructuring.html">Array destructuring</a>
-      <a href="/topics/2_fat_arrow_function.html">Fat Arrow Function</a>
+      <a href="/topics/1_array_destructuring.html">1 Array Destructuring</a>
+      <a href="/topics/2_fat_arrow_function.html">2 Fat Arrow Function</a>
+      <a href="/topics/3_default_parameters.html">3 Default Parameters</a>
     </nav>
     <main>
-      <h1>Home page</h1>
+      <h1>LEARN MODERN JAVASCRIPT - ES6</h1>
     </main>
   </body>
 </html>
