--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   </head>
   <body>
     <nav>
-      <a href="/" aria-current="page">Home</a>
+      <!-- <a href="/" aria-current="page">Home</a> -->
       <a href="/topics/1_array_destructuring.html">1 Array Destructuring</a>
       <a href="/topics/2_fat_arrow_function.html">2 Fat Arrow Function</a>
       <a href="/topics/3_default_parameters.html">3 Default Parameters</a>
+      <a href="/topics/4_rest_parameters.html">4 Rest Parameters</a>
     </nav>
     <main>
       <h1>LEARN MODERN JAVASCRIPT - ES6</h1>
