--- a/topics/2_fat_arrow_function.html
+++ b/topics/2_fat_arrow_function.html
@@ -4,6 +4,7 @@
   <p>
     <b>Details :</b> ES6 introduced new way of writing consise function in
     javascript. Its just a different syntax nothing change in execution.
+    <a class="back_btn" href="/">Back to Home</a>
   </p>
   <div>Execution Below</div>
 </div>
