--- a/topics/3_default_parameters.html
+++ b/topics/3_default_parameters.html
@@ -4,6 +4,7 @@
   <p>
     <b>Details :</b> Default parameters allow to pass default value if no value
     or undefined is passed to function parameters
+    <a class="back_btn" href="/">Back to Home</a>
   </p>
   <div>Execution Below</div>
 </div>
