--- a/topics/4_rest_parameters.html
+++ b/topics/4_rest_parameters.html
@@ -4,6 +4,7 @@
   <p>
     <b>Details :</b> Rest parameters is used to accept infinite parameters in a
     function call.
+    <a class="back_btn" href="/">Back to Home</a>
   </p>
   <div>Execution Below</div>
 </div>
