5 Spread operators done

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="/topics/2_fat_arrow_function.html">2 Fat Arrow Function</a>
       <a href="/topics/3_default_parameters.html">3 Default Parameters</a>
       <a href="/topics/4_rest_parameters.html">4 Rest Parameters</a>
+      <a href="/topics/5_spread_operators.html">5 Spread Operators</a>
     </nav>
     <main>
       <h1>LEARN MODERN JAVASCRIPT - ES6</h1>
