6 Var Let Const done and back to home button fixed again.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <a href="/topics/3_default_parameters.html">3 Default Parameters</a>
       <a href="/topics/4_rest_parameters.html">4 Rest Parameters</a>
       <a href="/topics/5_spread_operators.html">5 Spread Operators</a>
+      <a href="/topics/6_var_let_const.html">6 Var Let Const</a>
     </nav>
     <main>
       <h1>LEARN MODERN JAVASCRIPT - ES6</h1>
