--- a/topics/1_array_destructuring.html
+++ b/topics/1_array_destructuring.html
@@ -6,7 +6,7 @@
     separate variables.
     <a class="back_btn" href="/">Back to Home</a>
   </p>
-  <div>Execution Below</div>
+  <div>Execution Below <a class="back_btn" href="/">Back to Home</a></div>
 </div>
 
 <script>
