--- a/topics/2_fat_arrow_function.html
+++ b/topics/2_fat_arrow_function.html
@@ -6,7 +6,7 @@
     javascript. Its just a different syntax nothing change in execution.
     <a class="back_btn" href="/">Back to Home</a>
   </p>
-  <div>Execution Below</div>
+  <div>Execution Below <a class="back_btn" href="/">Back to Home</a></div>
 </div>
 
 <script>
