--- a/topics/3_default_parameters.html
+++ b/topics/3_default_parameters.html
@@ -6,7 +6,7 @@
     or undefined is passed to function parameters
     <a class="back_btn" href="/">Back to Home</a>
   </p>
-  <div>Execution Below</div>
+  <div>Execution Below <a class="back_btn" href="/">Back to Home</a></div>
 </div>
 
 <script>
