8 New String Methods done

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <a href="/topics/4_rest_parameters.html">4 Rest Parameters</a>
       <a href="/topics/5_spread_operators.html">5 Spread Operators</a>
       <a href="/topics/6_var_let_const.html">6 Var Let Const</a>
+      <a href="/topics/7_template_literals.html">7 Template Literals</a>
+      <a href="/topics/8_new_string_methods.html">8 New String Methods</a>
     </nav>
     <main>
       <h1>LEARN MODERN JAVASCRIPT - ES6</h1>
