Some css fixes at topic header section

--- a/topics/8_new_string_methods.html
+++ b/topics/8_new_string_methods.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../styles.css" />
 <div class="topic_header">
-  <h3><b>Topic :</b> Template Literals / Template Strings</h3>
+  <h3><b>Topic :</b> <span>Template Literals / Template Strings</span></h3>
   <p>
     <b>Details :</b> ES6 introduced new string functions like startsWith,
     endsWith, includes and repeat.
