Header cosmatic changes

--- a/topics/1_array_destructuring.html
+++ b/topics/1_array_destructuring.html
@@ -1,10 +1,9 @@
 <link rel="stylesheet" href="../styles.css" />
 <div class="topic_header">
-  <h3><b>Topic :</b> Array Destructuring</h3>
+  <h3><b>Topic :</b> <span>Array Destructuring</span></h3>
   <p>
     <b>Details :</b> It is basically used to extract values from array into
     separate variables.
-    <a class="back_btn" href="/">Back to Home</a>
   </p>
   <div>Execution Below <a class="back_btn" href="/">Back to Home</a></div>
 </div>
