--- a/topics/2_fat_arrow_function.html
+++ b/topics/2_fat_arrow_function.html
@@ -1,10 +1,9 @@
 <link rel="stylesheet" href="../styles.css" />
 <div class="topic_header">
-  <h3><b>Topic :</b> Arrow Function / Fat Arrow Function</h3>
+  <h3><b>Topic :</b> <span>Arrow Function / Fat Arrow Function</span></h3>
   <p>
     <b>Details :</b> ES6 introduced new way of writing consise function in
     javascript. Its just a different syntax nothing change in execution.
-    <a class="back_btn" href="/">Back to Home</a>
   </p>
   <div>Execution Below <a class="back_btn" href="/">Back to Home</a></div>
 </div>
