--- a/topics/3_default_parameters.html
+++ b/topics/3_default_parameters.html
@@ -1,10 +1,9 @@
 <link rel="stylesheet" href="../styles.css" />
 <div class="topic_header">
-  <h3><b>Topic :</b> Default Parameters</h3>
+  <h3><b>Topic :</b> <span>Default Parameters</span></h3>
   <p>
     <b>Details :</b> Default parameters allow to pass default value if no value
     or undefined is passed to function parameters
-    <a class="back_btn" href="/">Back to Home</a>
   </p>
   <div>Execution Below <a class="back_btn" href="/">Back to Home</a></div>
 </div>
