--- a/topics/4_rest_parameters.html
+++ b/topics/4_rest_parameters.html
@@ -1,10 +1,9 @@
 <link rel="stylesheet" href="../styles.css" />
 <div class="topic_header">
-  <h3><b>Topic :</b> Rest Parameters</h3>
+  <h3><b>Topic :</b> <span>Rest Parameters</span></h3>
   <p>
     <b>Details :</b> Rest parameters is used to accept infinite parameters in a
     function call.
-    <a class="back_btn" href="/">Back to Home</a>
   </p>
   <div>Execution Below <a class="back_btn" href="/">Back to Home</a></div>
 </div>
