--- a/topics/5_spread_operators.html
+++ b/topics/5_spread_operators.html
@@ -1,11 +1,10 @@
 <link rel="stylesheet" href="../styles.css" />
 <div class="topic_header">
-  <h3><b>Topic :</b> Spread Operators</h3>
+  <h3><b>Topic :</b> <span>Spread Operators</span></h3>
   <p>
     <b>Details :</b> Spread operators are used to pass array in function
     argument to accept it in separate variable values. also we can use it to
     concatinate.
-    <a class="back_btn" href="/">Back to Home</a>
   </p>
   <div>Execution Below <a class="back_btn" href="/">Back to Home</a></div>
 </div>
