--- a/topics/6_var_let_const.html
+++ b/topics/6_var_let_const.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../styles.css" />
 <div class="topic_header">
-  <h3><b>Topic :</b> Var / Let / Const Difference</h3>
+  <h3><b>Topic :</b> <span>Var / Let / Const Difference</span></h3>
   <p>
     <b>Details :</b> Var : is used for functional scope and let/const having
     block level scope.
