--- a/topics/7_template_literals.html
+++ b/topics/7_template_literals.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../styles.css" />
 <div class="topic_header">
-  <h3><b>Topic :</b> Template Literals / Template Strings</h3>
+  <h3><b>Topic :</b> <span>Template Literals / Template Strings</span></h3>
   <p>
     <b>Details :</b> Its a new way to concatinate variables or expression insdie
     string by avoiding "+" sign.
